objects/S1_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_CAPIQ_ID__c</fullName>
        <description>US 5444569: Auto populate fields on Request and Response Objects</description>
        <formula>Account__r.SNPCAPIQ__CapitalIQCompanyId_txt__c</formula>
        <label>Account CAPIQ ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>Formula to get the account country if Account is selected or Opportunity country if account is not selected, blank if none of the lookups are selected</description>
        <formula>IF(ISBLANK(Account__c), Opportunity__r.Account.BillingCountry ,Account__r.BillingCountry )</formula>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>S1 Requests</relationshipLabel>
        <relationshipName>S1_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Activity (External)</fullName>
                </value>
                <value>
                    <fullName>Education (Internal)</fullName>
                </value>
                <value>
                    <fullName>Expert Insights &amp; Idea Generation (Internal)</fullName>
                </value>
                <value>
                    <fullName>Marketing Events</fullName>
                </value>
                <value>
                    <fullName>Resource/Materials (External)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>US 5450464: store the close date of S1 request</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <inlineHelpText>Please select the division for which the request is being created.</inlineHelpText>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Engineering Solutions</fullName>
                </value>
                <value>
                    <fullName>Commodity Insights</fullName>
                    <isActive>false</isActive>
                    <label>Commodity Insights</label>
                </value>
                <value>
                    <fullName>MI</fullName>
                    <isActive>false</isActive>
                    <label>MI</label>
                </value>
                <value>
                    <fullName>Ratings</fullName>
                    <isActive>false</isActive>
                    <label>Ratings</label>
                </value>
                <value>
                    <fullName>SPDJI</fullName>
                    <isActive>false</isActive>
                    <label>SPDJI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry related to the S1 request</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication Services</fullName>
                </value>
                <value>
                    <fullName>Consumer Discretionary</fullName>
                </value>
                <value>
                    <fullName>Consumer Staples</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Financials</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Industrials</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US 5450464: Check box to allow users to submit requests without selecting account/contact</description>
        <inlineHelpText>Please check if the Account or Opportunity selection is not applicable to this request</inlineHelpText>
        <label>Not applicable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please select an opportunity related to the account.</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>S1 Requests</relationshipLabel>
        <relationshipName>S1_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Push_Updates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Push Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <formula>Owner:User.FirstName +&apos; &apos;+  Owner:User.LastName</formula>
        <label>Requested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>S1 Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requested_By__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Description__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Requests</label>
    </listViews>
    <nameField>
        <displayFormat>Req-{0000}</displayFormat>
        <label>S1 Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S1 Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_and_Oppy_blank</fullName>
        <active>true</active>
        <description>US 5306779 : Account or Opportunity should be blank when Not applicable is checked</description>
        <errorConditionFormula>!(ISBLANK( Account__c ) &amp;&amp; ISBLANK( Opportunity__c )) &amp;&amp;  Not_applicable__c</errorConditionFormula>
        <errorDisplayField>Not_applicable__c</errorDisplayField>
        <errorMessage>Please uncheck the &apos;Not Applicable&apos; checkbox, if Account or Opportunity is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_and_Oppy_required</fullName>
        <active>true</active>
        <description>US 5306779 : Account or Opportunity is required if the not applicable checkbox is unchecked</description>
        <errorConditionFormula>ISBLANK( Account__c ) &amp;&amp;  ISBLANK( Opportunity__c ) &amp;&amp;  !Not_applicable__c</errorConditionFormula>
        <errorMessage>To proceed, please check the Not Applicable checkbox if Account or Opportunity is not selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Updates</fullName>
        <active>true</active>
        <description>US 5306779: Restrict updates on the request if the status is not new</description>
        <errorConditionFormula>!ISPICKVAL( Status__c , &apos;New&apos;) &amp;&amp; (ISCHANGED( Account__c ) || ISCHANGED( Opportunity__c ) || ISCHANGED(  Description__c ) || ISCHANGED( Industry__c ) || ISCHANGED( Category__c ) || ISCHANGED( Division__c ) || ISCHANGED(  Not_applicable__c  ))</errorConditionFormula>
        <errorMessage>The request can only be updated when status is &apos;New&apos;</errorMessage>
    </validationRules>
</CustomObject>